2006-07-08  Ville Vainio  <vivainio@gmail.com>

	* Magic.py: %cpaste now strips > from the beginning of lines
	to ease pasting quoted code from emails. Contributed by 
	Stefan van der Walt.

2006-06-29  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py, Shell.py: qt4agg matplotlib backend support for pylab
	mode, patch contributed by Darren Dale. NEEDS TESTING! 

2006-06-28  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Give the ibrowse cursor row
	a blue background. Fix fetching new display rows when the browser
	scrolls more than a screenful (e.g. by using the goto command).

2006-06-27  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (_inspect, _ofind) Apply David Huard's 
	patch for displaying the correct docstring for 'property' 
	attributes.

2006-06-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Put the documentation of the keyboard
	commands into the methods implementing them.

2006-06-22  Fernando Perez  <Fernando.Perez@colorado.edu>

	* ipython.el (ipython-indentation-hook): cleanup patch, submitted
	by Kov Chai <tchaikov-AT-gmail.com>.  He notes that the original
	autoindent support was authored by Jin Liu.

2006-06-22  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Replace the plain dictionaries used
	for keymaps with a custom class that simplifies handling.

2006-06-19  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: ibrowse now properly handles terminal
	resizing. This requires Python 2.5 to work.

2006-06-16  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: Add two new commands to
	ibrowse: "hideattr" (mapped to "h") hides the attribute under
	the cursor. "unhiderattrs" (mapped to "H") reveals all hidden
	attributes again. Remapped the help command to "?". Display
	keycodes in the range 0x01-0x1F as CTRL-xx. Add CTRL-a and CTRL-e
	as keys for the "home" and "end" commands. Add three new commands