@@ -1,3 +1,9 @@
+2006-07-12  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ipipe.py (eval, ifilter, isort, ieval):
+	Compile expression strings into code objects. This should speed
+	up ifilter and friends somewhat.
+
 2006-07-08  Ville Vainio  <vivainio@gmail.com>
 
 	* Magic.py: %cpaste now strips > from the beginning of lines
